WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119280
Bottom/right sticky positioning don't correctly handle scroll containers with padding
https://bugs.webkit.org/show_bug.cgi?id=119280
Summary
Bottom/right sticky positioning don't correctly handle scroll containers with...
Corey Ford
Reported
2013-07-30 15:26:41 PDT
In the attached testcase, the bottom of the blue box should be 20px above the top of the horizontal scrollbar (assuming the intent is to position it relative to the content box of the scroll container). Instead, the bottom of the blue box is 20px below the top of the scrollbar. The same behavior holds for sticky-right positioning. In general, sticky positioned elements appear to be positioned relative to a box that has the size of the scroll container's padding box, but the origin of the scroll container's content box. (And percentage sticky offsets also seem to be computed in terms of the padding box size.)
Attachments
Testcase
(261 bytes, text/html)
2013-07-30 15:27 PDT
,
Corey Ford
no flags
Details
Patch
(7.42 KB, patch)
2014-02-16 21:13 PST
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Corey Ford
Comment 1
2013-07-30 15:27:14 PDT
Created
attachment 207773
[details]
Testcase
Viatcheslav Ostapenko
Comment 2
2014-02-16 21:13:48 PST
Created
attachment 224328
[details]
Patch
WebKit Commit Bot
Comment 3
2014-02-18 14:52:26 PST
Comment on
attachment 224328
[details]
Patch Clearing flags on attachment: 224328 Committed
r164324
: <
http://trac.webkit.org/changeset/164324
>
WebKit Commit Bot
Comment 4
2014-02-18 14:52:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug