Bottom/right sticky positioning don't correctly handle scroll containers with padding https://bugs.webkit.org/show_bug.cgi?id=119280

Patch by Viatcheslav Ostapenko <sl.ostapenko@samsung.com> on 2014-02-18
Reviewed by Simon Fraser.

Source/WebCore:

Take padding into account during calculation of overflow constraining rect for sticky
positioning.

Test: fast/css/sticky/sticky-bottom-overflow-padding.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::stickyPositionOffset):

LayoutTests:

Check that sticky elements positioned correcly in overflow with padding.

* fast/css/sticky/sticky-bottom-overflow-padding-expected.html: Added.
* fast/css/sticky/sticky-bottom-overflow-padding.html: Added.

Canonical link: https://commits.webkit.org/147034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164324 268f45cc-cd09-0410-ab3c-d52691b4dbfc